src/css/style.css
* {
    box-sizing: border-box;
    margin: 0;
}

@font-face {
    font-family: Avenir-Light;
    src: url("../assets/fonts/avenir-next-lt-pro-cufonfonts/AvenirNextLTPro-Regular.otf")
}

.container {
    width: 100%;
    height: 100%;
}

body {
    font-family: Avenir-Light;
    width: 100%;
    height: 100%;
    margin: 0;
}

header {
    z-index: 2;
    width: 100vw;
    height: 20%;
    position: fixed;
    background-color: transparent;
}

nav {
    width: 100%;
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
}

.toggle-menu-icon {
    display: none;
}

nav>ul {
    width: 90%;
    height: 100%;
    list-style-type: none;
    margin: 0;
    padding: 0;
    display: grid;
    grid-template-columns: 15% 15% 40% 15% 15%;
    grid-template-rows: 100%;
}

nav>ul>li,
.header-links {
    width: 100%;
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    text-decoration: none;
    color: #000000;
    font-size: 2vw;
}

.logo-link {
    align-self: center;
    width: 30%;
}

.logo {
    height: 60%;
    width: 100%;
}

main {
    width: 100%;
    height: 100%;
    display: grid;
    grid-template-rows: repeat(4, 100vh);
    grid-template-columns: 100%;
}

.home>.opacity-mask {
    width: 100%;
    height: 100vh;
    background: linear-gradient(180deg, #600364 0%, #B15F43 31%, #FCB425 75%);
    position: absolute;
    z-index: -1;
    opacity: 0.45;
}

.home {
    width: 100%;
    height: 100vh;
    display: flex;
    align-items: flex-end;
    position: fixed;
    flex-direction: column;
}

.home-elements {
    width: 100%;
    height: 80%;
    display: grid;
    grid-template-columns: 100%;
    grid-template-rows: repeat(10, 10%);
}

.home-elements>.img-container:nth-child(1) {
    z-index: 0;
    grid-column: 1/2;
    grid-row: 1/11;
    height: 90%;
    align-self: flex-end;
}

.home-img {
    width: 100%;
    height: 100%;
}

.home-elements>.img-container:nth-child(2) {
    z-index: 1;
    grid-column: 1/2;
    grid-row: 5/11;
    background: url("../assets/images/cities_this.png") no-repeat center bottom;
    background-size: contain;
}

.home-elements>h1 {
    grid-column: 1/2;
    grid-row: 3/4;
    align-self: center;
    justify-self: center;
    z-index: 1;
    width: 30%;
    height: 50%;
    display: flex;
    align-items: center;
    justify-content: center;
}

.icons {
    z-index: 1;
    width: 4%;
    height: 90%;
    grid-row: 4/7;
    grid-column: 1/2;
    display: grid;
    grid-template-columns: 100%;
    grid-template-rows: repeat(3, 33.3%);
    margin-left: 2%;
    justify-items: center;
}

.icons>a {
    width: 100%;
    height: 100%;
}

.icon {
    height: 50%;
    width: 100%;
}

.language-bttn-container {
    grid-row: 9/11;
    grid-column: 1/2;
    height: 80%;
    width: 4%;
    margin-left: 3%;
    z-index: 1;
    display: flex;
    align-items: flex-end;
}

.language-bttn {
    background: transparent;
    border: none;
    height: 50%;
    width: 100%;
    padding: 0;
    cursor: pointer;
}

.language-bttn>img {
    width: 100%;
    height: 100%;
}

.call-to-action-bttn-container {
    grid-row: 9/11;
    grid-column: 1/2;
    height: 80%;
    width: 4%;
    margin-right: 3%;
    z-index: 1;
    display: flex;
    align-items: flex-end;
    justify-self: right;
}

.call-to-action-bttn {
    width: 100%;
}

.projects {
    grid-row: 2/3;
    height: 100vh;
    width: 100%;
}

.zeppelin {
    z-index: 1;
    grid-column: 1/2;
    grid-row: 5/8;
    width: 100%;
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
}

.zeppelin>img {
    width: 100%;
    height: 50%;
}

/* Media queries */

@media screen and (max-width: 1024px) and (orientation: portrait) {
    nav>ul {
        grid-template-columns: 17% 17% 32% 17% 17%;
    }

    .icons {
        margin-left: 4%;
        grid-row: 5/8;
    }

    header{
        height: 20%;
    }

    nav>ul>li, .header-links {
        font-size: 2.5vw;
    }

    .toggle-menu-icon {
        display: none;
    }

    .home-elements {
        height: 80%;
    }

    .home-elements>.img-container:nth-child(1) {
        grid-row: 2/11;
        height: 100%;
        align-self: flex-end;
    }

    .home-elements>.img-container:nth-child(2) {
        grid-row: 5/11;
        background: url(../assets/images/cities.png) no-repeat 40% bottom;
        background-size: cover;
    }

    .home-elements>h1 {
        grid-row: 3/5;
        height: 50%;
        width: 50%;
    }

    .zeppelin {
        grid-row: 6/9;
    }

    .zeppelin>img {
        height: 50%;
    }
}

@media screen and (max-width: 600px) and (orientation: portrait) {
    header {
        height: auto;
        display: flex;
        flex-direction: column;
    }

    .toggle-menu-icon {
        align-self: flex-end;
        display: block;
        height: 30px;
        width: 30px;
        margin: 20px;
    }

    .toggle-menu-icon>svg {
        width: 100%;
        height: 100%;
    }

    #path1.open {
        animation: 0.7s path1Animation ease-out forwards;
    }

    #path2.open {
        width: 0%;
        opacity: 0;
    }

    #path3.open {
        animation: 0.7s path2Animation ease-out forwards;
    }

    #path1.close {
        animation: 0.7s path1Animationreverse ease-out forwards;
    }

    #path2.close {
        width: 100%;
        opacity: 1;
    }

    #path3.close {
        animation: 0.7s path2Animationreverse ease-out forwards;
    }

    nav {
        display: none
    }

    .active {
        display: flex;
        width: 100%;
        height: 100vh;
        animation: 0.5s menuAppearance linear forwards;
    }

    .active-header {
        background-image: url("../assets/images/menu-background.svg");
        background-color: #ffffff;
        animation: 0.4s menuAppearance ease-in forwards;
    }

    nav>ul {
        width: 100%;
        height: 100%;
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
    }

    nav>ul>li,
    .header-links {
        width: 100%;
        height: 10%;
        color: #ffffff;
        font-size: 8vw;
    }

    .li-logo {
        display: none;
    }
    
    .logo-link{
        height: 40%;
    }

    .logo {
        height: 40%;
        width: 60%;
    }

    .home-elements {
        height: 60%;
    }

    .home-elements>.img-container:nth-child(1) {
        grid-row: 1/11;
        height: 100%;
        align-self: flex-end;
    }

    .home-elements>.img-container:nth-child(2) {
        grid-row: 4/11;
        background: url(../assets/images/cities.png) no-repeat 40% bottom;
        background-size: cover;
    }

    .home-elements>h1 {
        grid-row: 2/4;
        height: 60%;
        width: 60%;
    }

    .zeppelin {
        grid-row: 5/8;
    }

    .zeppelin>img {
        height: 60%;
    }

    .icons {
        margin-left: 5%;
        grid-row: 8/11;
    }

    .language-bttn-container {
        align-items: flex-end;
        grid-row: 8/9;
        grid-column: 1/2;
        margin-right: 5%;
        justify-self: right;
        width: 6%;
        height: 100%;
    }

    .call-to-action-bttn-container {
        width: 6%;
        margin-right: 5%;
        grid-row: 9/11;
        align-items: center;
        height: 100%;
    }

    @keyframes menuAppearance {
        0% {
            opacity: 0;
        }

        50% {
            opacity: 0.5;
        }

        100% {
            opacity: 1;
        }
    }

    @keyframes path1Animation {
        50% {
            transform: translateY(44px);
        }

        100% {
            transform: rotate(45deg);
            transform-origin: 0 50%;
        }
    }

    @keyframes path2Animation {
        50% {
            transform: translateY(-44px);
        }

        100% {
            transform: rotate(-45deg);
            transform-origin: 25% 50%;
        }
    }

    @keyframes path1Animationreverse {
        0% {
            transform: rotate(45deg) translateY(-44px) translateX(5px);
        }

        30% {
            transform: translateY(-10px);
        }

        100% {
            transform: translateY(0px);
        }
    }

    @keyframes path2Animationreverse {
        0% {
            transform: rotate(-45deg) translateY(44px) translateX(5px);
        }

        30% {
            transform: translateY(10px);
        }

        100% {
            transform: translateY(0px);
        }
    }
}

